{{$NEXT}}

1.302051  2016-08-11 20:26:22-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix setting hub when getting context

1.302050  2016-08-10 22:12:19-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Add contact info to main doc and readme

1.302049  2016-07-28 07:03:31-07:00 America/Los_Angeles

    - No Changes from last trial

1.302048  2016-07-27 07:42:14-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Add 'active' attribute to hub

1.302047  2016-07-22 22:36:29-07:00 America/Los_Angeles

    - No Changes from last trial

1.302046  2016-07-19 06:58:43-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Restore traditional note/diag return values (#694)

1.302045  2016-07-18 09:05:15-07:00 America/Los_Angeles

    - No changes from last TRIAL release

1.302044  2016-07-13 17:56:20-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix test that segv'd on older perls

1.302043  2016-07-12 09:37:31-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix TODO in mixed T2/TB subtests

1.302042  2016-07-11 20:30:35-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix IPC event ordering bug

1.302041  2016-07-09 17:01:45-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Work around IPC bug on windows

1.302040  2016-07-09 16:55:00-07:00 America/Los_Angeles

    - No changes from last trial

1.302039  2016-07-07 22:01:02-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Add Info event for better diagnostics

1.302038  2016-07-05 07:00:18-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix broken MANIFEST.SKIP entries (#689)

1.302037  2016-07-04 10:09:00-07:00 America/Los_Angeles

    - No changes from trial

1.302036  2016-07-03 11:52:45-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Restore PerlIO layer cloning on STDERR and STDOUT

1.302035  2016-06-27 08:55:55-07:00 America/Los_Angeles

    - No changes since TRIAL release

1.302034  2016-06-25 13:51:00-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix some breakage info (Thanks Dolman!)