@@ -1,0 +1,7 @@
+package SkipAll;
+use strict;
+use warnings;
+
+main::skip_all("foo");
+
+1;
